// Vitest Snapshot v1

exports[`preprocessor > phosphorSvelteOptimize > should preprocess icon imports 1`] = `
{
  "code": "<script>
  import Airplane from \\"phosphor-svelte/lib/Airplane\\";
  import Cube from \\"phosphor-svelte/lib/Cube\\";
import Rectangle from \\"phosphor-svelte/lib/Rectangle\\";
import Horse from \\"phosphor-svelte/lib/Horse\\";
</script>
",
  "dependencies": [],
  "map": SourceMap {
    "mappings": "AAAA,CAAC,MAAM,CCAP;AACA;AACA,EAAE;AAAA;AAAA,8CAAyD;ADC3D,CAAC,CAAC,MAAM;",
    "names": [],
    "sources": [
      "App.svelte",
      "",
    ],
    "version": 3,
  },
  "toString": [Function],
}
`;

exports[`preprocessor > phosphorSvelteOptimize > should preprocess multiple imports 1`] = `
{
  "code": "<script>
  import Airplane from \\"phosphor-svelte/lib/Airplane\\";
import Gear from \\"phosphor-svelte/lib/Gear\\";
  import Cube from \\"phosphor-svelte/lib/Cube\\";
import Rectangle from \\"phosphor-svelte/lib/Rectangle\\";
import Horse from \\"phosphor-svelte/lib/Horse\\";
  import X from \\"phosphor-svelte/lib/X\\";
</script>
",
  "dependencies": [],
  "map": SourceMap {
    "mappings": "AAAA,CAAC,MAAM,CCAP;AACA,EAAE;AAAA,4CAAiD;AACnD,EAAE;AAAA;AAAA,8CAAyD;AAC3D,EAAE,sCAAoC;ADCtC,CAAC,CAAC,MAAM;",
    "names": [],
    "sources": [
      "App.svelte",
      "",
    ],
    "version": 3,
  },
  "toString": [Function],
}
`;

exports[`preprocessor > phosphorSvelteOptimize > should separate type imports 1`] = `
{
  "code": "<script lang=\\"ts\\">
  import Airplane from \\"phosphor-svelte/lib/Airplane\\";
import Gear from \\"phosphor-svelte/lib/Gear\\";
import type { IconContextProps } from \\"phosphor-svelte\\";
</script>
",
  "dependencies": [],
  "map": SourceMap {
    "mappings": "AAAA,CAAC,MAAM,CAAC,IAAI,CAAC,CAAC,EAAE,CAAC,CCAjB;AACA,EAAE;AAAA;AAAA,wDAAwE;ADC1E,CAAC,CAAC,MAAM;",
    "names": [],
    "sources": [
      "App.svelte",
      "",
    ],
    "version": 3,
  },
  "toString": [Function],
}
`;
